--- a/Widget/index.html
+++ b/Widget/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <aside>
-    <div id="widgetContainer" data-url_base="http://localhost/iu/" data-path="index.php"
+    <div id="widgetContainer" data-url_base="http://localhost/ET3Grupo1/" data-path="index.php"
          data-controller="json" data-action="showall" data-id="3"></div>
 </aside>
 
